--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,48 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/popup.css" />
-    <script src="/assets/popup.js"></script>
-    <title>Advanced Video Controls</title>
-  </head>
-  
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/assets/popup.css" />
+  <script src="/assets/popup.js"></script>
+  <title>Advanced Video Controls</title>
+</head>
 
-  </body>
+<body>
+  <header class="header">
+    <div class="title">
+      <img class="title_icon" src="logo.png" alt="Advanced Video Controls">
+      <h3 class="title_name">Advanced Video Controls</h3>
+    </div>
+    <div class="title_desc">
+      Use the slider below to control the volume of the current tab.
+    </div>
+  </header>
+
+  <div class="volume-slider">
+    <input class="slider" type="range" autofocus data-max-volume="200">
+  </div>
+
+  <div class="volume-info">
+    <span class="volume-min">0 %</span>
+    <span class="volume-current">
+      Volume:
+      <span class="current-val"></span> %
+    </span>
+    <span class="volume-max">200 %</span>
+  </div>
+
+  <div class="buttons">
+    <span class="ocr-button">
+      <button>OCR</button>
+    </span>
+
+    <span class="pip-button">
+      <button>Picture in Picture</button>
+    </span>
+  </div>
+  
+</body>
 
 </html>
