added volume control functionality

--- a/popup.html
+++ b/popup.html
@@ -22,7 +22,7 @@
   </header>
 
   <div class="volume-slider">
-    <input class="slider" type="range" autofocus data-max-volume="200">
+    <input class="slider" type="range" min="0" max="200" step="1" value="100" autofocus>
   </div>
 
   <div class="volume-info">
