pip and ocr logo added

--- a/popup.html
+++ b/popup.html
@@ -36,11 +36,13 @@
 
   <div class="buttons">
     <span class="ocr-button">
-      <button>OCR</button>
+      <img src="ocr_logo.png" alt="OCR">
+      <!-- <button>OCR</button> -->
     </span>
 
     <span class="pip-button">
-      <button>Picture in Picture</button>
+      <img src="pip_logo.png">
+      <!-- <button>Picture in Picture</button> -->
     </span>
   </div>
   
