fixed volume functionality

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/assets/popup.css" />
-  <script src="/assets/popup.js"></script>
+  
   <title>Advanced Video Controls</title>
 </head>
 
@@ -29,7 +29,7 @@
     <span class="volume-min">0 %</span>
     <span class="volume-current">
       Volume:
-      <span class="current-val"></span> %
+      <span class="current-val">100</span> %
     </span>
     <span class="volume-max">200 %</span>
   </div>
@@ -43,7 +43,6 @@
       <button>Picture in Picture</button>
     </span>
   </div>
-  
+  <script src="/assets/popup.js"></script>
 </body>
-
 </html>
