added required icons and hover effect on them

--- a/popup.html
+++ b/popup.html
@@ -35,14 +35,12 @@
   </div>
 
   <div class="buttons">
-    <span class="ocr-button">
+    <span class="ocr-button" data-tooltip="Optical Character Recognition">
       <img src="ocr_logo.png" alt="OCR">
-      <!-- <button>OCR</button> -->
     </span>
 
-    <span class="pip-button">
+    <span class="pip-button" data-tooltip="Picture In Picture">
       <img src="pip_logo.png">
-      <!-- <button>Picture in Picture</button> -->
     </span>
   </div>
   
