--- a/assets/popup.html
+++ b/assets/popup.html
@@ -13,7 +13,7 @@
 <body>
   <header class="header">
     <div class="title">
-      <img class="title_icon" src="logo.png" alt="Advanced Video Controls">
+      <img class="title_icon" src="images/logo.png" alt="Advanced Video Controls">
       <h3 class="title_name">Advanced Video Controls</h3>
     </div>
     <div class="title_desc">
@@ -36,11 +36,17 @@
 
   <div class="buttons">
     <span class="ocr-button" data-tooltip="Optical Character Recognition">
-      <img src="ocr_logo.png" alt="OCR">
+      <img src="images/ocr_logo.png" alt="OCR">
+    </span>
+
+    <span class="speed-buttons">
+      <h1 class="speed-value">Speed: 1.0x</h1>
+      <button class="speed-down" data-tooltip="Decrease Speed">-0.1x</button>
+      <button class="speed-up" data-tooltip="Increase Speed">+0.1x</button>
     </span>
 
     <span class="pip-button" data-tooltip="Picture In Picture">
-      <img src="pip_logo.png">
+      <img src="images/pip_logo.png">
     </span>
   </div>
   <script src="/assets/popup.js"></script>
