--- a/assets/popup.html
+++ b/assets/popup.html
@@ -48,6 +48,10 @@
     <span class="pip-button" data-tooltip="Picture In Picture">
       <img src="images/pip_logo.png">
     </span>
+    <div class="autoscroll">
+      <input type="checkbox" id="autoScrollToggle">
+      <label for="autoScrollToggle">Auto Scroll</label>
+    </div>
   </div>
   <script src="/assets/popup.js"></script>
 </body>
