added settings page

--- a/assets/popup.html
+++ b/assets/popup.html
@@ -49,9 +49,10 @@
       <img src="images/pip_logo.png">
     </span>
     <div class="autoscroll">
-      <input type="checkbox" id="autoScrollToggle">
-      <label for="autoScrollToggle">Auto Scroll</label>
+      <button class="btn autoplay-button">Autoscroll Shorts</button>
     </div>
+    <div class="settings">
+      <button class="btn settings-button">Settings</button>
   </div>
   <script src="/assets/popup.js"></script>
 </body>
