Video Save button added with functionality

--- a/assets/popup.html
+++ b/assets/popup.html
@@ -50,6 +50,7 @@
     </span>
     <div class="settings">
       <button class="btn settings-button">Settings</button>
+      <button id="saveVideoButton" class="btn settings-button">Save Video</button>
   </div>
   <script src="/assets/popup.js"></script>
 </body>
