removed unnecessary permissions, increased volume max range to 1000

--- a/assets/settings/settings.html
+++ b/assets/settings/settings.html
@@ -17,8 +17,8 @@
                 <input type="number" step="0.1" min="0.1" max="5" id="defaultPlaybackSpeed" required>
             </div>
             <div class="form-group">
-                <label for="defaultVolumeLevel">Default Volume Level (0 - 200):</label>
-                <input type="number" step="1" min="0" max="200" id="defaultVolumeLevel" required>
+                <label for="defaultVolumeLevel">Default Volume Level (0 - 1000%):</label>
+                <input type="number" step="1" min="0" max="1000" id="defaultVolumeLevel" required>
             </div>
             <button type="submit">Save Settings</button>
         </form>
