--- a/assets/popup.html
+++ b/assets/popup.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="popup.css" />
   
-  <title>Advanced Video Controls</title>
+  <title>Media Morph</title>
 </head>
 
 <body>
   <header class="header">
-      <img class="title_icon" src="images/logo2.svg" alt="Advanced Video Controls">
-      <h3 class="title_name">Advanced Video Controls</h3>
+      <img class="title_icon" src="images/logo2.svg" alt="Media Morph">
+      <h3 class="title_name">Media Morph</h3>
   </header>
 
   <div class="volume-slider">
