--- a/assets/popup.html
+++ b/assets/popup.html
@@ -12,7 +12,7 @@
 
 <body>
   <header class="header">
-      <img class="title_icon" src="images/logo2.svg" alt="Media Morph">
+      <img class="title_icon" src="images/logo.png" alt="Media Morph">
       <h3 class="title_name">Media Morph</h3>
   </header>
 
